# LedController

./: CMakeLists.txt  README.md  run
SRC/: CMakeLists.txt
SRC/LedClient/: CMakeLists.txt  ledclient.cpp  ledclient.h  ledclient.ui  main.cpp  net.cpp  net.h  widgets.cpp  widgets.h
SRC/LedLib/: CMakeLists.txt  ledlib.cpp  ledlib.h
SRC/LedServer/: CMakeLists.txt  ThreadPool.cpp  ThreadPool.h  ledserver.cpp  ledserver.h  ledserver.ui  main.cpp  net.cpp  net.h
SRC/LedTests/: CMakeLists.txt  ledtest.cpp  ledtest.h  main.cpp
